--- a/data/NorthSeaRelationships.ipynb
+++ b/data/NorthSeaRelationships.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "091d2fff-5517-467c-8eee-2a2c51f758f9",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "e1ded3a3-f2ef-4de7-b813-27df6718f1cc",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "a17bfc3f-f901-4438-a9d9-64118a29364e",
    "metadata": {},
    "outputs": [],
@@ -36,15 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "7f4ef0d8-c128-4654-a5c5-f10200fa34b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "graph = nx.DiGraph()\n",
-    "\n",
+    "nodes=set()\n",
     "for d in data:\n",
     "    links = d[0].split(\"-\")\n",
+    "    nodes.add(links[0])\n",
+    "    nodes.add(links[1])\n",
     "    graph.add_edge(links[0],links[1])\n",
     "        \n",
     "pos = nx.spring_layout(graph)"
@@ -63,6 +65,24 @@
     "        widths.append(float(d[year])*10)\n",
     "    return widths\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "47da8f82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Catch_pel', 'PELAGICS', 'Larvae', 'NetPP', 'HP', 'HV', 'SPEED', 'W', 'GUILLEMOT', 'DEMERSAL', 'A2', 'CHLA', 'GUILL', 'Harbour seal', 'SST', 'A4', 'Grey seal', 'LARVAE', 'BT', 'A5', 'GANN', 'KITT', 'PEA', 'Chla', 'A6', 'GANNET'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nodes)"
    ]
   },
   {
